--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "firstCup",
+  "name": "cagematch",
   "version": "0.0.0",
-  "description": "The first cup dude!",
+  "description": "Cage v Cage, in a Cage",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.1",
+    "body-parser": "^1.12.0",
+    "connect-mongo": "^0.7.0",
+    "cookie-parser": "^1.3.4",
     "express": "^4.12.2",
-    "mongoose": "^3.8.24"
+    "express-session": "^1.10.3",
+    "mongoose": "^3.8.24",
+    "parseurl": "^1.3.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "url": "^0.10.3"
   }
 }
