--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "parseurl": "^1.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "request": "^2.55.0",
     "url": "^0.10.3"
   }
 }
