--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "backbone": "~1.1.2",
     "jquery": "~2.1.3",
-    "materialize": "~0.96.1"
+    "materialize": "~0.96.1",
+    "angular": "~1.3.15"
   }
 }
