--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,7 @@
     "backbone": "~1.1.2",
     "jquery": "~2.1.3",
     "materialize": "~0.96.1",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "angular-route": "~1.3.15"
   }
 }
