--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "jquery": "~2.1.3",
     "materialize": "~0.96.1",
     "angular": "~1.3.15",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "angular-ui-router": "~0.2.14"
   }
 }
