--- a/public/bower.json
+++ b/public/bower.json
@@ -21,6 +21,7 @@
     "materialize": "~0.96.1",
     "angular": "~1.3.15",
     "angular-route": "~1.3.15",
-    "angular-ui-router": "~0.2.14"
+    "angular-ui-router": "~0.2.14",
+    "d3": "~3.5.5"
   }
 }
