--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.1",
     "body-parser": "^1.12.0",
+    "cheerio": "*",
     "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.4",
     "express": "^4.12.2",
